--- a/board/assets/LayerStack/style.css
+++ b/board/assets/LayerStack/style.css
@@ -9,3 +9,9 @@ body {
 span.blocklyTreeLabel{
     color:black;
 }
+
+#svgoutput svg {
+    width: 100%;
+    height: auto;
+    display: block; 
+}
